업그레이드 핸드건 하나만들어봄

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Script\UI\CameraCS\GameCamera.cs" />
     <Compile Include="Assets\Script\UI\CameraCS\MenuCamera.cs" />
     <Compile Include="Assets\Script\Player\Weapon\RangeWeapon.cs" />
+    <Compile Include="Assets\Script\VamserWeapon\HandGunUP.cs" />
     <Compile Include="Assets\Script\System\Bullet.cs" />
     <Compile Include="Assets\Script\UI\ZoneCS\EnemyZone.cs" />
     <Compile Include="Assets\Script\Enemy\Boss\BossRock.cs" />
@@ -100,7 +101,7 @@
     <Compile Include="Assets\Script\Enemy\Enemy.cs" />
     <Compile Include="Assets\Script\Enemy\Boss\BossMisail.cs" />
     <Compile Include="Assets\Script\Manager\GameManager.cs" />
-    <Compile Include="Assets\Script\VamserWeapon\HandGunUP.cs" />
+    <Compile Include="Assets\Script\VamserWeapon\VAMSWeapon.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
